Use redirect from resources for CustomTabs (#9)
* Change the way we get redirect uri.

And fix the sample project.

* Fix chrome tabs redirect issue.

* Rename callback to redirect.

* Add documentation for custom tabs.

* Update names in error message.

* Fix typo

--- a/auth-lib/src/main/res/values/strings.xml
+++ b/auth-lib/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
 
 <resources>
     <string name="com_spotify_sdk_login_progress">Loading…</string>
+    <string name="com_spotify_sdk_redirect_scheme"></string>
+    <string name="com_spotify_sdk_redirect_host"></string>
 </resources>
