--- a/auth-lib/src/main/res/values/strings.xml
+++ b/auth-lib/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <!--
-    Copyright (c) 2015 Spotify AB
+    Copyright (c) 2015-2016 Spotify AB
 
     Licensed to the Apache Software Foundation (ASF) under one
     or more contributor license agreements.  See the NOTICE file
@@ -20,7 +19,6 @@
     specific language governing permissions and limitations
     under the License.
 -->
-
 <resources>
     <string name="com_spotify_sdk_login_progress">Loading…</string>
     <string name="com_spotify_sdk_redirect_scheme"></string>
