--- a/auth-sample/src/main/res/values/strings.xml
+++ b/auth-sample/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="warning_need_token">You need to request an access token first</string>
     <string name="code">Code: %1$s</string>
     <string name="token">Access Token: %1$s</string>
+    <string name="btn_get_profile">Get User Profile</string>
+    <string name="btn_req_code">Request Code</string>
+    <string name="btn_req_token">Request Token</string>
+    <string name="btn_clear_credentials">Clear WebView Credentials</string>
 </resources>
